--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@
   .content {
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
   }
 
