fixing width of homepage

--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,6 +1,5 @@
 .about-us-container {
-    max-width: 1000px;
-    width: 100%
+    width: 1000px;
     /* margin: 0 auto; */
     /* padding: 20px; */
     /* background-color: red; */
