--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /*overflow: hidden;*/
 }
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 
 .landing-page {
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   background-color: #f8f8f8;
 }
@@ -29,7 +33,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
