--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,5 +1,6 @@
 .about-us-container {
-    width: 1000px;
+    max-width: 1000px;
+    width: 90%;
     /* margin: 0 auto; */
     /* padding: 20px; */
     /* background-color: red; */
