--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,8 +1,8 @@
 .about-us-container {
     max-width: 1000px;
     width: 90%;
-    /* margin: 0 auto; */
-    /* padding: 20px; */
+    margin: 0 auto;
+    padding: 20px;
     /* background-color: red; */
     text-align: justify;
   }
