--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ html, body {
 
 .landing-page {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #f8f8f8;
 }
@@ -33,8 +33,8 @@ html, body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
- top: 100px;
+  width: 100%;
+  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
   gap: 20px;
@@ -43,11 +43,13 @@ html, body {
 .landing_content {
  margin-top: 430px;
   margin-left: 100px;
-  transform: translate(-50%, -50%);
+  transform: none;
+  margin: 50px auto;
   z-index: 1;
   text-align: center;
   /* background-color: red; */
-  width: 400px;
+  max-width: 400px;
+  width: 90%;
   height: 400px;
   display: flex;
   align-items: center;
